k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-site
  namespace: quiz-app
spec:
  selector:
    app: quiz-site
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
